WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245318
FrameLoader using bitwise instead of logical operator on booleans
https://bugs.webkit.org/show_bug.cgi?id=245318
Summary
FrameLoader using bitwise instead of logical operator on booleans
Don Olmstead
Reported
2022-09-17 10:44:38 PDT
-Wbitwise-instead-of-logical
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2022-09-17 10:48:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4445
EWS
Comment 2
2022-09-17 12:06:27 PDT
Committed
254590@main
(bfe70e108466): <
https://commits.webkit.org/254590@main
> Reviewed commits have been landed. Closing PR #4445 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-17 12:07:18 PDT
<
rdar://problem/100072984
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug