FrameLoader using bitwise instead of logical operator on booleans https://bugs.webkit.org/show_bug.cgi?id=245318

Reviewed by Chris Dumez.

Clang 14 reported this through `-Wbitwise-instead-of-logical`.

* Source/WebCore/loader/FrameLoader.cpp:

Canonical link: https://commits.webkit.org/254590@main